fixes style centering and spacing on forms and buttons

--- a/app/assets/stylesheets/section/user.scss
+++ b/app/assets/stylesheets/section/user.scss
@@ -14,6 +14,7 @@
 
   .container .btn {
     background-color: #afc7b1;
+    margin: 10px;
   }
 }
 .portfolio-show {
